--- a/public/styles.css
+++ b/public/styles.css
@@ -12,52 +12,41 @@ html, body {
 
 .chatbox {
     position:absolute;
-    left:13%;
     padding:0;
-    height:90%;
-    width:87%;
+    max-height:90%;
+    width:100%;
+    overflow-y: scroll;
 }
 
 .inputbox {
     position:relative;
-    top:90%;
-    left: 15%;
+    top:102%;
+    left: 2%;
     height:5%;
-    width:80%;
+    width:95%;
     background-color: #2C2F33;
-    color:white;
     border-radius: 8px;
     z-index: 1;
 }
 
-#chatbar {
-    position:relative;
-    top:90%;
-    height:100%;
-    width:100%;
-    background-color: #2C2F33;
-    border-radius: 8px;
-    line-height: 4vh;
+.sampletext {
+    color: lightslategray;
+    text-align: left;
+    padding: 5%;
 }
 
-.userlist {
-    position: relative;
-    width:13%;
-    top: -5%;
-    height:100%;
-    background-color: #3e4247
+
+.chatbox .message {
+    color:white;
+    padding:10px;
 }
 
-.textbox {
-    position:relative;
-    height:5%;
-    width:20%;
+.chatbox .user {
+    font-weight: bold;
+    opacity: 0.7;
+    margin-bottom: 5px;
 }
 
-.textbox p {
-    position:relative;
-    height:10%;
-    width:50%;
-    left:20%;
-    color: white;
+.chatbox .time {
+
 }
