--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,54 @@ html, body {
     height: 100%;
 }
 
+.usernameModal {
+    position: fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    z-index: 2;
+    width:100%;
+    height:100%;
+    background-color:rgba(0, 0, 0, 0.5);
+}
+
+.usernameModal-inner {
+    position:fixed;
+    background-color: black;
+    margin:auto;
+    width:100%;
+    height:100%;
+}
+
+.usernameModal-inner h1 {
+    position:relative;
+    left:40%;
+    top:25%;
+    color:white;
+    font-size: 5em;
+}
+
+.usernameModal-inner .userInput {
+    position:fixed;
+    top: 50%;
+    left: 34%;
+    width: 40%;
+    height:5%;
+    font-size:300%;
+    text-align: center;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: groove;
+    background-color: black;
+    color:white;
+}
+
+.usernameModal-inner .userInput:focus {
+    outline:0;
+}
+
 .chatwindow {
     position: relative;
     height: 100%;
@@ -39,6 +87,7 @@ html, body {
     background-color: #2C2F33;
     border-radius: 8px;
     padding:1.5vh;
+    color:white;
 }
 
 .userlist {
@@ -62,12 +111,14 @@ html, body {
     margin-bottom: 0px;
     font-size:1.5em;
 }
+
 .chatbox .body {
     position:relative;
     left:10%;
     color:white;
     font-size:2em;
 }
+
 .chatbox span {
     color: gray;
     font-size:0.8em;
