--- a/public/styles.css
+++ b/public/styles.css
@@ -93,9 +93,16 @@ html, body {
 .userlist {
     position: relative;
     width:13%;
+    text-align: center;
     top: -5%;
     height:100%;
-    background-color: #3e4247
+    background-color: #181a1b
+}
+
+.userlist span {
+    position:relative;
+    font-size: 1.5em;
+    color:white;
 }
 
 .chatbox .message {
@@ -122,4 +129,22 @@ html, body {
 .chatbox span {
     color: gray;
     font-size:0.8em;
+}
+
+.userBox {
+    position:relative;
+    text-align: center;
+    width:100%;
+    height:5%;
+    border-radius:10%;
+    background-color: rgba(119, 119, 119, 0.5);
+}
+
+
+.name {
+    position:relative;
+    font-size: 1.5em;
+    top:30%;
+    color:white;
+    text-align: center;
 }
