--- a/public/styles.css
+++ b/public/styles.css
@@ -135,9 +135,10 @@ html, body {
 .userBox {
     position:relative;
     text-align: center;
+    padding: 8px;
     width:100%;
     height:5%;
-    border-radius:10%;
+    border-radius:5%;
     background-color: rgba(119, 119, 119, 0.5);
 }
 
