--- a/public/styles.css
+++ b/public/styles.css
@@ -135,8 +135,8 @@ html, body {
 .userBox {
     position:relative;
     text-align: center;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 10%;
+    padding-bottom: 10%;
     width:100%;
     height:3%;
     border-radius:5%;
