--- a/public/styles.css
+++ b/public/styles.css
@@ -17,6 +17,7 @@ html, body {
 }
 
 .usernameModal-inner {
+    text-align: center;
     position:fixed;
     background-color: black;
     margin:auto;
@@ -26,16 +27,15 @@ html, body {
 
 .usernameModal-inner h1 {
     position:relative;
-    left:40%;
     top:25%;
     color:white;
-    font-size: 5em;
+    font-size: 5vh;
 }
 
 .usernameModal-inner .userInput {
     position:fixed;
     top: 50%;
-    left: 34%;
+    left: 30%;
     width: 40%;
     height:5%;
     font-size:300%;
@@ -136,21 +136,24 @@ html, body {
 .userBox {
     position:relative;
     text-align: center;
-    margin-top: 10%;
     margin-bottom: 10%;
-    padding-top:10px;
     padding-bottom: 10px;
     width:100%;
     height:3%;
-    border-radius:5%;
-    background-color: rgba(119, 119, 119, 0.5);
 }
 
 
 .name {
     position:relative;
-    font-size: 1.5em;
+    font-size: 1vw;
     top:30%;
     color:white;
     text-align: center;
+}
+
+.numUsers {
+    position: relative;
+    top:90%;
+    color:white;
+    font-size: 1vw;
 }
