--- a/public/styles.css
+++ b/public/styles.css
@@ -10,10 +10,23 @@ html, body {
     margin:0;
     top:0;
     left:0;
-    z-index: 2;
+    z-index: 999;
     width:100%;
     height:100%;
     background-color:rgba(0, 0, 0, 0.5);
+}
+
+.optionsModal {
+    position: fixed;
+    display: none;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    z-index: 10;
+    width:100%;
+    height:100%;
+    background-color:rgba(0, 0, 0);
 }
 
 .usernameModal-inner {
@@ -38,7 +51,7 @@ html, body {
     left: 30%;
     width: 40%;
     height:5%;
-    font-size:300%;
+    font-size:2vh;
     text-align: center;
     border-top-style: hidden;
     border-right-style: hidden;
@@ -59,6 +72,18 @@ html, body {
     background-color: #23272A;
 }
 
+.chatwindow img {
+    position:absolute;
+    top:3%;
+    left: 95%;
+    height:3%;
+    width:2%;
+    z-index: 3;
+}
+
+.chatwindow img:hover {
+    filter: invert(40%);
+}
 .chatbox {
     position:absolute;
     left:13%;
@@ -97,12 +122,13 @@ html, body {
     text-align: center;
     top: -5%;
     height:100%;
-    background-color: #181a1b
+    background-color: #181a1b;
+    z-index: 5;
 }
 
 .userlist span {
     position:relative;
-    font-size: 1.5em;
+    font-size: 1vw;
     color:white;
 }
 
@@ -112,6 +138,11 @@ html, body {
     max-width: 80%;
 }
 
+.chatbox .message img {
+    position: absolute;
+    left: -5%;
+
+}
 .chatbox .user {
     position:relative;
     left:10%;
