--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,14 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow:hidden;
+* {
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    overflow-x:hidden;
 }
 
+body, html {
+    height:100%;
+    width:100%;
+}
 
 .usernameModal {
     position: fixed;
@@ -68,7 +73,7 @@ html, body {
 
 /* main chat window that user list and chatbox sit in */
 .chatwindow {
-    position: relative;
+    display: flex;
     height: 100%;
     width: 100%;
     background-color: #23272A;
@@ -90,26 +95,27 @@ html, body {
 
 /* Start of box where messages go, the area messages reside */
 .chatbox {
+    position:relative;
+    left:10%;
     height: 90%;
     overflow-y: scroll;
-    width:100%;
+    width:90%;
+    background-color: #23272A;
 }
 
 .inputbox {
-    position:relative;
-    top:90%;
+    position:absolute;
     left: 15%;
+    top: 90%;
     height:5%;
     width:80%;
     background-color: #2C2F33;
-    color:white;
     border-radius: 8px;
-    z-index: 1;
+    overflow-y: hidden;
 }
 
-#chatbar {
-    position:relative;
-    top:90%;
+.chatbar {
+    position:absolute;
     height:100%;
     width:100%;
     background-color: #2C2F33;
@@ -117,52 +123,19 @@ html, body {
     color:white;
 }
 
+/* Far left side of screen that holds usernames */
 .userlist {
-    position: relative;
-    width:13%;
+    position: absolute;
+    width:10%;
     text-align: center;
     height:100%;
     background-color: #181a1b;
-    z-index: 5;
 }
 
 .userlist span {
     position:relative;
     font-size: 1vw;
     color:white;
-}
-
-.chatbox .message {
-    padding:10px;
-    overflow-wrap:break-word;
-    max-width: 80%;
-}
-
-.chatbox .message img {
-    position: absolute;
-    left: -5%;
-
-}
-
-.chatbox .user {
-    position:relative;
-    left:10%;
-    font-weight: bold;
-    opacity: 0.7;
-    margin-bottom: 0px;
-    font-size:1.5em;
-}
-
-.chatbox .body {
-    position:relative;
-    left:10%;
-    color:white;
-    font-size:2em;
-}
-
-.chatbox span {
-    color: gray;
-    font-size:0.8em;
 }
 
 .userBox {
@@ -188,3 +161,38 @@ html, body {
     color:white;
     font-size: 1vw;
 }
+
+/* Messages that appear in chatting area */
+.chatbox .message {
+    padding:10px;
+    overflow-wrap:break-word;
+    max-width: 80%;
+}
+
+.chatbox .message img {
+    position: absolute;
+    left: -5%;
+
+}
+
+.chatbox .user {
+    position:relative;
+    left: 5%;
+    font-weight: bold;
+    opacity: 0.7;
+    margin-bottom: 0px;
+    font-size:1.5em;
+}
+
+.chatbox .body {
+    position:relative;
+    left:5%;
+    color:white;
+    font-size:2em;
+}
+
+.chatbox span {
+    color: gray;
+    font-size:0.8em;
+}
+
