--- a/public/styles.css
+++ b/public/styles.css
@@ -16,7 +16,7 @@ body, html {
     margin:0;
     top:0;
     left:0;
-    z-index: 999;
+    z-index: 1;
     width:100%;
     height:100%;
     background-color:rgba(0, 0, 0, 0.5);
@@ -27,13 +27,18 @@ body, html {
     display: none;
     padding:0;
     margin:0;
-    top:0;
-    left:0;
-    z-index: 10;
-    width:100%;
-    height:100%;
-    background-color:rgba(0, 0, 0);
+    top:20%;
+    left:30%;
+    width:40%;
+    height:40%;
+    z-index: 1;
+    background-color:rgba(20, 20, 20);
+    border-radius: 10%;
 }
+
+.optionsModal .wrapper {height:20%; width:100%; text-align: center; font-size: 3vh; color:white}
+.optionsModal .wrapper img {position:absolute; height:8%; left:85%; top:2%;}
+.optionsModal .wrapper img:hover {filter:invert(20%);}
 
 .usernameModal-inner {
     text-align: center;
@@ -84,7 +89,6 @@ body, html {
     top:3%;
     left: 95%;
     height:3%;
-    z-index: 3;
 }
 
 .chatwindow #cog:hover {
