--- a/public/styles.css
+++ b/public/styles.css
@@ -53,6 +53,13 @@ body, html {
     color:white;
 }
 
+#server_browser p {
+    position:absolute;
+    color:white;
+    font-size: 1.5vh;
+    left:38%;
+    top:15%;
+}  
 .server_menu_box {
     position: relative;
     display:flex;
@@ -98,6 +105,10 @@ body, html {
 }
 
 #server_input {position:relative; left:20%; top:5%;width:7.5vw;}
+#server_input::placeholder {
+    font-size: 1vh;
+    padding-left: 5%;
+}
 
 #server_button {
     position: relative;
